Document PPDG/src/objects/GenericObject__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>GenericObjects</relationshipLabel>
        <relationshipName>GenericObjects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CCJ_Reason__c</fullName>
        <label>CCJ Reason</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CCJ_amount_of_CCJ__c</fullName>
        <label>CCJ amount of CCJ</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CCJ_amount_repaid__c</fullName>
        <label>CCJ amount repaid</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CCJ_certificate_held__c</fullName>
        <label>CCJ certificate held</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CCJ_date_of_CCJ__c</fullName>
        <label>CCJ date of CCJ</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CCJ_date_repaid__c</fullName>
        <label>CCJ date repaid</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Debt_consolidation_text__c</fullName>
        <formula>IF( text( Refinance_Type__c ) = &quot;repay other debts&quot;, &quot;As you have stated that an element of the finance balance is being used to consolidate other debts that you have, you should note that by adding other debts to the finance balance, the total cost of repaying the additional debt may be greater, because you will be repaying the additional debt over the term of your finance.&quot;, 
IF( text( Refinance_Type__c ) = &quot;Personal debt consolidation to a family member or friend&quot;, &quot;As you have stated that an element of the finance balance is being used to consolidate other debts that you have, you should note that by adding other debts to the finance balance, the total cost of repaying the additional debt may be greater, because you will be repaying the additional debt over the term of your finance.&quot;, 
IF( text( Refinance_Type__c ) = &quot;Third party debt consolidation for a family member or friend&quot;, &quot;As you have stated that an element of the finance balance is being used to consolidate other debts that you have, you should note that by adding other debts to the finance balance, the total cost of repaying the additional debt may be greater, because you will be repaying the additional debt over the term of your finance.&quot;, 
&quot; &quot;)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Debt consolidation text</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Debt_warning_text__c</fullName>
        <formula>IF( text( Refinance_Type__c ) = &quot;repay other debts&quot;, &quot;THINK CAREFULLY BEFORE SECURING OTHER DEBTS AGAINST YOUR HOME&quot;, 
IF( text( Refinance_Type__c ) = &quot;Personal debt consolidation to a family member or friend&quot;, &quot;THINK CAREFULLY BEFORE SECURING OTHER DEBTS AGAINST YOUR HOME&quot;, 
IF( text( Refinance_Type__c ) = &quot;Third party debt consolidation for a family member or friend&quot;, &quot;THINK CAREFULLY BEFORE SECURING OTHER DEBTS AGAINST YOUR HOME&quot;, 
&quot; &quot;)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Debt warning text</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Default_amount__c</fullName>
        <label>Default amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Default_date__c</fullName>
        <label>Default date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Default_date_repaid__c</fullName>
        <label>Default date repaid</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Default_reason__c</fullName>
        <label>Default reason</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Deposit_Details__c</fullName>
        <label>Deposit Details</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Deposit_Source__c</fullName>
        <label>Deposit Source</label>
        <picklist>
            <picklistValues>
                <fullName>Another source</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gift</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Share equity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Personal Savings</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Director&apos;s Loan</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Deposit_Value__c</fullName>
        <label>Deposit Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>GenericObjects</relationshipLabel>
        <relationshipName>GenericObjects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Refinance_Details__c</fullName>
        <label>Refinance_Details</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Refinance_Type__c</fullName>
        <label>Refinance_Type</label>
        <picklist>
            <picklistValues>
                <fullName>Home improvements</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Repay home improvements</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Repay car loan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pay school fees</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Purchase pension</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Repay other debts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cost &amp; fees for home finance arrangement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deposit on additional property</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Personal debt consolidation to a family member or friend</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gift/donation to a family member friend or charitable organisation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Funeral expenses</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business purposes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Investment (including stocks, shares or third parties)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Third party debt consolidation for a family member or friend</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Refinance_Value__c</fullName>
        <label>Refinance_Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>DepositSource</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RefinanceSource</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Default</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CCJ</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>GenericObject</label>
    <nameField>
        <label>GenericObject Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>GenericObjects</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>